--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,25 @@ Faces/jay.8.jpg
 __pycache__/gui.cpython-39.pyc
 dataset_faces.dat
 __pycache__/facial_recognition_data_capture.cpython-39.pyc
+Faces/face0.jpg
+Faces/face1.jpg
+Faces/face2.jpg
+Faces/face3.jpg
+Faces/face4.jpg
+Faces/face5.jpg
+Faces/face6.jpg
+Faces/face7.jpg
+Faces/face8.jpg
+Faces/face9.jpg
+Faces/face10.jpg
+Faces/face11.jpg
+Faces/face12.jpg
+Faces/face13.jpg
+Faces/face14.jpg
+Faces/face15.jpg
+Faces/face16.jpg
+Faces/face17.jpg
+Faces/face18.jpg
+Faces/face19.jpg
+Faces/face20.jpg
+Faces/face21.jpg
